# ESP-IDF

./: CMakeLists.txt
Application/: CMakeLists.txt
Application/GPIO/: CMakeLists.txt  GPIO.h  GpioInput.cpp  GpioOutput.cpp
Application/WiFi/: CMakeLists.txt  wifi.cpp  wifi.h
Core/: CMakeLists.txt
Core/Inc/: main.h
Core/Src/: main.cpp
